--- a/JiraToNotion/requirements.txt
+++ b/JiraToNotion/requirements.txt
@@ -1,16 +1,27 @@
+astroid==2.4.1
+autopep8==1.5.2
 beautifulsoup4==4.9.0
 bs4==0.0.1
 cached-property==1.5.1
 certifi==2020.4.5.1
 chardet==3.0.4
+colorama==0.4.3
 commonmark==0.9.1
 dictdiffer==0.8.1
 idna==2.9
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 notion==0.0.25
+pycodestyle==2.6.0
+pylint==2.5.2
 python-slugify==4.0.0
 pytz==2020.1
 requests==2.23.0
+six==1.14.0
 soupsieve==2.0
 text-unidecode==1.3
+toml==0.10.0
 tzlocal==2.1
 urllib3==1.25.9
+wrapt==1.12.1
