--- a/JiraToNotion/configs/example_jira_config.json
+++ b/JiraToNotion/configs/example_jira_config.json
@@ -1,5 +1,6 @@
 {
   "token": "",
   "username": "",
-  "project_number": ""
+  "board_number": "",
+  "jira_cloud_base": "" //https://<jira_cloud_base>.atlassian.net/rest/api/3/
 }
