Add Print notes for slack option. Update to allow customizable print order

--- a/JiraToNotion/configs/example_jira_config.json
+++ b/JiraToNotion/configs/example_jira_config.json
@@ -2,5 +2,6 @@
   "token": "",
   "username": "",
   "board_number": "",
-  "jira_cloud_base": "" //https://<jira_cloud_base>.atlassian.net/rest/api/3/
+  "jira_cloud_base": "", // https://<jira_cloud_base>.atlassian.net/rest/api/3/
+  "jira_sort_property_id": "" // Optional, if you do not know / care about order then just leave as empty string. 
 }
