--- a/JiraToNotion/requirements.txt
+++ b/JiraToNotion/requirements.txt
@@ -12,7 +12,7 @@ idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
-notion==0.0.28
+git+https://github.com/jamalex/notion-py.git@refs/pull/294/merge
 pycodestyle==2.6.0
 pylint==2.5.2
 python-slugify==4.0.0
